--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -89,6 +89,7 @@
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
+  font-family: "Squada One", sans-serif;
 }
 
 .p1:hover,
