--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -67,7 +67,7 @@
   bottom: -0.5vh;
   width: 100%;
   height: 0.2vh;
-  background-color: white;
+  background-color: black;
   opacity: 0;
   transform-origin: left center;
   transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
