--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -168,3 +168,16 @@
   opacity: 0;
   transition: visibility 0s, opacity 0.5s linear;
 }
+@media only screen and (max-width: 412px){
+  .missions{
+      height: 50%;
+
+  }
+  .tilted-head{
+    transform: rotate(0);
+    top: -3vh;
+    font-size: 2rem;
+    left: 10vw;
+    background-color: transparent;
+  }
+}
