--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,3 +1,49 @@
+/* 
+
+@media only screen and (max-width: 412px){
+  .missions{
+      height: 50%;
+
+  }
+  .tilted-head{
+    transform: rotate(0);
+    top: -5vh;
+    font-size: 2rem;
+    left: 10vw;
+    background-color: transparent;
+  }
+  .p1, .p2, .p3, .p4, .p5, .p6 {
+    height: auto;
+  }
+  .p1:hover, .p2:hover, .p3:hover, .p4:hover, .p5:hover, .p6:hover {
+    height: auto; 
+    background-color: #b52431;
+    color: white;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+  }
+
+
+.p_desc {
+  visibility: visible;
+  width: 80%;
+  text-align: center;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
+}
+
+.p_desc.visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.imgp{
+  height: 100%;
+  width: 80%;
+  background-color: red;
+}
+} */
 @import url("https://fonts.googleapis.com/css2?family=Squada+One&display=swap");
 .missions {
   margin-top: 40vh;
@@ -5,26 +51,24 @@
   width: 100vw;
   background-color: #0f0f0f;
   display: flex;
-  /* align-items: center; */
+
   justify-content: center;
 }
 
 .project-sec {
   height: 90%;
   width: 90%;
-  /* padding: 10vh 0; */
-  /* background-color: red; */
-  /* color: white; */
+
   position: relative;
   display: flex;
-  /* align-items: center; */
+
   justify-content: center;
 }
 .projects {
   height: 100%;
   width: 90%;
   border-radius: 1.6875rem;
-  /* position: relative; */
+
   background-color: #d9d9d9;
   display: flex;
   flex-direction: column;
@@ -38,20 +82,20 @@
   top: 16.3vh;
   background-color: #b52431;
   font-size: 4rem;
-  /* height: 4vh; */
+
   width: 20vw;
   font-family: "Squada One", sans-serif;
-  /* padding: 1vh 1vw; */
+
   border-radius: 1.5rem;
   text-align: center;
   transform: rotate(-90deg);
-  /* z-index: 1; */
+
 }
 
 .display-sec {
   width: 95%;
   height: 85%;
-  /* background-color: red; */
+
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -68,7 +112,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 1vh;
-  /* background-color: blue; */
+
 }
 
 .p1,
@@ -127,7 +171,7 @@
   width: 100%;
 
   border-radius: 20px;
-  /* background-color: #b52431; */
+
   transition: all 250ms;
   padding: 1vh 1vh;
   overflow: hidden;
@@ -168,16 +212,57 @@
   opacity: 0;
   transition: visibility 0s, opacity 0.5s linear;
 }
-@media only screen and (max-width: 412px){
-  .missions{
-      height: 50%;
 
+@media only screen and (max-width: 412px) {
+  .missions {
+    height: 50%;
   }
-  .tilted-head{
+  .tilted-head {
     transform: rotate(0);
-    top: -3vh;
+    top: -5vh;
     font-size: 2rem;
     left: 10vw;
     background-color: transparent;
+  }
+  .p1,
+  .p2,
+  .p3,
+  .p4,
+  .p5,
+  .p6 {
+    height: 100%;
+    width: 100%;
+    margin: 0.4vh 0.2vw;
+  }
+  .project-title {
+    font-size: 1.2rem; /* Smaller font size for mobile */
+  }
+  .p_desc {
+    display: none; /* Hide project descriptions on mobile */
+  }
+  .imgp {
+    height: 100%;
+    width: 100%;
+    position: relative;
+  }
+  .imgp img {
+    height: 100%;
+    width: 100%;
+  }
+  .p1 .project-title,
+  .p2 .project-title,
+  .p3 .project-title,
+  .p4 .project-title,
+  .p5 .project-title,
+  .p6 .project-title {
+    display: block;
+  }
+  .explore{
+    height: 20%;
+    width: 50%;
+    margin-left: 30%;
+    & p{
+      font-size: 1rem;
+    }
   }
 }
