--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,49 +1,3 @@
-/* 
-
-@media only screen and (max-width: 412px){
-  .missions{
-      height: 50%;
-
-  }
-  .tilted-head{
-    transform: rotate(0);
-    top: -5vh;
-    font-size: 2rem;
-    left: 10vw;
-    background-color: transparent;
-  }
-  .p1, .p2, .p3, .p4, .p5, .p6 {
-    height: auto;
-  }
-  .p1:hover, .p2:hover, .p3:hover, .p4:hover, .p5:hover, .p6:hover {
-    height: auto; 
-    background-color: #b52431;
-    color: white;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-  }
-
-
-.p_desc {
-  visibility: visible;
-  width: 80%;
-  text-align: center;
-  opacity: 0;
-  transition: visibility 0s, opacity 0.5s linear;
-}
-
-.p_desc.visible {
-  visibility: visible;
-  opacity: 1;
-}
-
-.imgp{
-  height: 100%;
-  width: 80%;
-  background-color: red;
-}
-} */
 @import url("https://fonts.googleapis.com/css2?family=Squada+One&display=swap");
 .missions {
   margin-top: 40vh;
@@ -89,7 +43,6 @@
   border-radius: 1.5rem;
   text-align: center;
   transform: rotate(-90deg);
-
 }
 
 .display-sec {
@@ -112,7 +65,6 @@
   align-items: center;
   justify-content: space-between;
   gap: 1vh;
-
 }
 
 .p1,
@@ -212,8 +164,64 @@
   opacity: 0;
   transition: visibility 0s, opacity 0.5s linear;
 }
+.arrow {
+  margin-top: 1vh;
+  font-size: 2vw;
+  color: #d9d9d9;
+  background-color: red;
+  border-radius: 50%;
+}
 
 @media only screen and (max-width: 412px) {
+  .arrow {
+    font-size: 2vw;
+    margin-bottom: 1.2vh;
+  }
+
+  .display-sec {
+    width: 95%;
+    height: 85%;
+    display: flex;
+    gap: 0.5vw;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1vh 1vw;
+  }
+
+  .row1,
+  .row2,
+  .row3 {
+    height: 95%;
+    width: 33.3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1vh;
+  }
+
+  .p1,
+  .p2,
+  .p3,
+  .p4,
+  .p5,
+  .p6 {
+    width: 95%;
+    height: 40%;
+    background-color: #b0b0b0;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: all 250ms;
+    padding: 0.4vh 0.2vw 5vh 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    cursor: pointer;
+    font-family: "Squada One", sans-serif;
+  }
+
   .missions {
     height: 50%;
   }
@@ -232,7 +240,7 @@
   .p6 {
     height: 100%;
     width: 100%;
-    margin: 0.4vh 0.2vw;
+    margin: 1vh 0.2vw;
   }
   .project-title {
     font-size: 1.2rem; /* Smaller font size for mobile */
@@ -241,9 +249,11 @@
     display: none; /* Hide project descriptions on mobile */
   }
   .imgp {
-    height: 100%;
+    height: 50vh;
     width: 100%;
-    position: relative;
+    /* position: relative; */
+    /* background-color: red; */
+    /* padding: 0; */
   }
   .imgp img {
     height: 100%;
@@ -257,11 +267,19 @@
   .p6 .project-title {
     display: block;
   }
-  .explore{
+
+  .p-con {
+    font-size: 1.2vh;
+  }
+  .explore {
     height: 20%;
-    width: 50%;
-    margin-left: 30%;
-    & p{
+
+    width: 58%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* margin-left: 30%; */
+    & p {
       font-size: 1rem;
     }
   }
